Bugs Fixes and Improvements
- fixes box divs showing white gaps between navbar and the main page.
- fixes contact modal beeing not centered according to the whole page.
- replaced X icon to normal x for device compatibility.

Signed-off by <markalbert.makondo@gmail.com> Mark Makondo

--- a/src/stylesheets/components/_about.scss
+++ b/src/stylesheets/components/_about.scss
@@ -23,7 +23,8 @@
         flex-direction: column;
         gap: 1.5rem;
         justify-content: center;
-
+        flex: 1;
+        
         &-sections {
             background-color: #1D1D1D;
 
